<resources>
    <string name="app_name">NextMoveApp</string>
    <string name="appName">Next Move App!</string>
    <string name="signUpText">Sign Up</string>
    <string name="logInText">Log In</string>
    <string name="signUp2Text">Sign Up 2</string>
    <string name="logIn2Text">Log In 2</string>
    <string name="updatesText">Updates</string>
    <string name="enterPasswordText">Enter your Password</string>
    <string name="enterUsernameText">Enter your Username</string>
    <string name="confirmPasswordText">Confirm your Password</string>
    <string name="backText">Back</string>
    <string name="welcomeText">Welcome</string>
    <string name="sign_up_2">Sign Up 2</string>
    <string name="log_in_2">Log In 2</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="reenter_your_password">Reenter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_e_mail2">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password2</string>
    <string name="enter_your_password2">Enter your password</string>
    <string name="logOutText">Log Out</string>
    <string name="createYourAccountString">Create your account</string>
    <string name="sign_in_into_your_account">Sign in into your account</string>
    <string name="helloText">Hello</string>
    <string name="welcomePageMessage">It\'s time to organize your day!</string>
</resources>